threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/klee-out-8/test000019.overshift.err
Error: overshift error
File: threadx/threadx/common/src/tx_thread_system_resume.c
Line: 217
assembly.ll line: 1139
State: 12
Stack: 
	#000042140 in klee_overshift_check(bitWidth=64, shift=symbolic) at runtime/Intrinsic/klee_overshift_check.c:27
	#100001139 in _tx_thread_system_resume(thread_ptr=symbolic) at threadx/threadx/common/src/tx_thread_system_resume.c:217
	#200000868 in _tx_queue_send(queue_ptr=symbolic, source_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common/src/tx_queue_send.c:262
	#300029227 in _txe_queue_send(queue_ptr=symbolic, source_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common/src/txe_queue_send.c:154
	#400013666 in _txm_module_manager_tx_queue_send_dispatch(module_instance=symbolic, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:1608
	#500006932 in _txm_module_manager_kernel_dispatch(kernel_request=43, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:447
	#600000236 in m_txe_queue_send(queue_ptr=symbolic, source_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common_modules/module_lib/src/txm_queue_send.c:77
	#700000210 in main() at evaluation_files/queue_send.c:17
